--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@ layout: default
   <paper-header-panel >
     <paper-toolbar>
       <div class="title">
-        {{ site.title }}Site Title
+        {{ site.title }}
       </div>
       <paper-icon-button icon="search"></paper-icon-button>
     </paper-toolbar>
     <div>
       <div class="grid grid-pad">
 
-        {% for post in site.posts %}
+        {% for post in paginator.posts %}
         <div class="col-1-2">
 
           <paper-material class="content post-card" elevation="0"
@@ -37,6 +37,25 @@ layout: default
         </div>
         {% endfor %}
       </div>
+      <table align="center" style="margin-bottom:160px;">
+        <tr>
+          <td style="padding-right:16px;">
+            <a href="{% if paginator.next_page %}{{ paginator.next_page_path }}{% else %}{% endif %}">
+              <paper-button>
+                << Older
+              </button>
+              </a>
+            </td>
+            <td>{{ paginator.page }} / {{ paginator.total_pages }}</td>
+            <td style="padding-left:16px;">
+              <a href="{% if paginator.previous_page %}{{ paginator.previous_page_path }}{% else %}{% endif %}">
+                <paper-button>
+               Newer >>
+              </button>
+             </a>
+           </td>
+         </tr>
+       </table>
     </div>
   </paper-header-panel>
 </body>
